# auto

./: .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml  embedded.yml
crates/auto-backend/: Cargo.toml
crates/auto-backend/src/: container.rs  differential.rs  emit.rs  lib.rs  manifest.rs
crates/auto-backend/tests/: container_prop.rs  divergence.rs
crates/auto-cli/: Cargo.toml
crates/auto-cli/src/: main.rs
crates/auto-cli/tests/: cli.rs
crates/auto-contract/: Cargo.toml
crates/auto-contract/src/: conform.rs  evalrun.rs  harness.rs  lib.rs  model.rs  parse.rs  properties.rs
crates/auto-contract/tests/: acceptance.rs  harness_store.rs  judged.rs  judged_differential.rs
crates/auto-daemon/: Cargo.toml
crates/auto-daemon/src/: cycle.rs  e2e.rs  lib.rs  run.rs  watch.rs  watermark.rs
crates/auto-dsl/: Cargo.toml
crates/auto-dsl/src/: lib.rs
crates/auto-frontier/: Cargo.toml
crates/auto-frontier/src/: anthropic.rs  capped.rs  ledger.rs  lib.rs  openai.rs  prices.rs
crates/auto-ir/: Cargo.toml  build.rs
crates/auto-ir/schema/: ir.fbs
crates/auto-ir/src/: effects.rs  examples.rs  graph.rs  ids.rs  lib.rs  node.rs  render.rs  ser.rs  types.rs
crates/auto-ir/tests/: golden.rs  roundtrip_prop.rs
crates/auto-ir/tests/golden/: branching.air  branching.txt  generative_effects.air  generative_effects.txt  tool_chain.air  tool_chain.txt
crates/auto-model/: Cargo.toml
crates/auto-model/src/: lib.rs  mlp.rs
crates/auto-node/: .npmignore  Cargo.toml  build.rs  index.d.ts  package.json
crates/auto-node/src/: bindings.rs  lib.rs  logic.rs
crates/auto-node/tests/: twin_contract.rs
crates/auto-passes/: Cargo.toml  build.rs
crates/auto-passes/dsl-interpreter/: Cargo.toml
crates/auto-passes/dsl-interpreter/src/: lib.rs
crates/auto-passes/mlp-interpreter/: Cargo.toml
crates/auto-passes/mlp-interpreter/src/: lib.rs
crates/auto-passes/model-interpreter/: Cargo.toml
crates/auto-passes/model-interpreter/src/: lib.rs
crates/auto-passes/src/: distillation.rs  extraction.rs  extraction_llm.rs  lib.rs  region.rs
crates/auto-passes/tests/: cegis.rs  interpreter_parity.rs  mlp_parity.rs  model_parity.rs
crates/auto-passes/trainer/: README.md  mlp_train.py  modal_mlp_train.py  modal_tree_train.py  test_trainers.py  tree_train.py
crates/auto-proxy/: Cargo.toml
crates/auto-proxy/src/: lib.rs  record.rs  server.rs
crates/auto-py/: Cargo.toml  pyproject.toml
crates/auto-py/src/: bindings.rs  lib.rs  logic.rs
crates/auto-registry/: Cargo.toml
crates/auto-registry/src/: lib.rs  remote.rs
crates/auto-registry/tests/: remote_loopback.rs
crates/auto-runtime/: Cargo.toml
crates/auto-runtime/src/: executor.rs  guard.rs  lib.rs  runner.rs  tier0.rs
crates/auto-runtime/tests/: executor_callback.rs  guard_conformal.rs  guard_embedding.rs  runner.rs  tier0.rs
crates/auto-serve/: Cargo.toml
crates/auto-serve/src/: api.rs  lib.rs  server.rs
crates/auto-trace/: Cargo.toml
crates/auto-trace/src/: determinism.rs  error.rs  jsonl.rs  lib.rs  model.rs  replay.rs  store.rs
crates/auto-trace/tests/: roundtrip_prop.proptest-regressions  roundtrip_prop.rs  sdk_wire_golden.rs
docs/: why-agi-compiler.md
evals/: README.md
evals/bench/: DESIGN.md  README.md  bench-f1.contract.toml  bench-f5.contract.toml  collect.py  probes-f1.jsonl  probes-f2.jsonl  run-f1.sh  run-f2.sh  run-f5.sh
evals/bench/f3-extraction/: README.md  agent.py  corpus.jsonl  extraction.contract.toml  probes.jsonl
evals/bench/f4-routing/: README.md  agent.py  corpus.jsonl  routing.contract.toml  validate_corpus.py
evals/daemon/: e2e.sh
evals/distill-agent/: agent.py  corpus.txt  e2e.sh  router.contract.toml
evals/embedded-node/: README.md  bench.js
evals/embedded-python/: README.md  bench.py
evals/inbox-agent/: README.md  agent.py  classify.contract.toml  corpus.txt  priority.contract.toml  summarize.contract.toml
evals/pipeline-agent/: agent.py  e2e.sh  region.contract.toml
evals/registry-remote/: e2e.sh
evals/serve-proxy/: e2e.sh  fake_upstream.py
evals/ticket-triage/: README.md  agent.py  triage-recorded.contract.toml  triage.contract.toml
evals/tool-agent/: agent.py  e2e.sh  lookup.py  region.contract.toml
evals/toy-agent/: agent.py  cases.jsonl  e2e.sh  fake-frontier.contract.toml  task.contract.toml  tier0_oracle.py
evals/toy-agent/fake-frontier-impl/: Cargo.toml  README.md
evals/toy-agent/fake-frontier-impl/src/: lib.rs
paper/: README.md  bench-results.md  claims.md  log.md
paper/evidence/: economics-inbox-agent.json  economics-ticket-triage.json  f6-control.csv  f6-ratchet-a100.csv  f6-ratchet-a100.csv.events.csv  f6-ratchet-a400-agent.csv  f6-ratchet-a400-agent.csv.events.csv  f6-ratchet-a400.csv  f6-ratchet-a400.csv.events.csv  f6-ratchet-noanswers.csv  f6-ratchet-noanswers.csv.events.csv  f6-summary.md
sdk/python/: README.md  pyproject.toml
sdk/python/auto_sdk/: __init__.py  tracer.py
sdk/python/tests/: test_tracer.py
sdk/typescript/: README.md  package.json
spec/: artifact.md  contract.md  distillation.md  ir.md  manifest.md  registry.md  runtime.md  synthesis.md  trace.md
spec/adr/: 0001-ir-serialization.md  0002-trace-storage.md  0003-contract-format.md  0004-artifact-execution.md  0005-symbolic-extraction.md  0006-distillation.md  0007-tiering-guards.md  0008-registry-signing.md  0009-neural-distillation.md  0010-frontier-client.md  0011-serve-daemon.md  0012-recording-proxy.md  0013-recompile-daemon.md  0014-conformal-guards.md  0015-region-compilation.md  0016-anthropic-provider.md  0017-capability-imports.md  0018-statistical-acceptance.md  0019-judged-matching.md  0020-evalrun-retention.md  0021-judged-differential.md  0022-remote-registry.md  0023-embedding-guards.md  0024-pyo3-embedding.md  0025-task-scope.md  0026-napi-embedding.md  0027-embedded-tool-host.md  0028-serve-tool-policy.md  0029-concurrent-replay.md  0030-torn-tail-recovery.md  0031-weighted-witnesses.md  0032-embedded-tool-budget.md  open-questions.md
(+25 files in other folders)
