[package]
name = "auto-dsl"
description = "Auto extraction DSL v0: the closed program model + evaluator shared by the native synthesizer and the wasm interpreter (one implementation, two compilations)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[lints]
workspace = true
