[package]
name = "auto-proxy"
description = "recording proxy: OpenAI-compatible endpoint that forwards to the real upstream and ingests every call as a trace (zero agent code changes)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
auto-frontier = { workspace = true }
auto-trace = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tiny_http = { workspace = true }
ureq = { workspace = true }

[dev-dependencies]
# unit tests round-trip a recorded exchange through a throwaway sqlite store
tempfile = { workspace = true }

[lints]
workspace = true
