[package]
name = "auto-runtime"
description = "Auto runtime, S3 slice: tier-1 wasm execution with capability refusal and resource limits. Guards/deopt/tiering land S6."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
auto-backend.workspace = true
auto-contract.workspace = true
# tier-0 frontier binding (src/tier0.rs): the deopt target is a real,
# spend-capped frontier model. This crate only drives the `Frontier` seam;
# the cap/ledger live in the client the caller constructs (ADR-0010).
auto-frontier.workspace = true
auto-model.workspace = true
serde.workspace = true
auto-trace.workspace = true
serde_json.workspace = true
thiserror.workspace = true
wasmtime.workspace = true

[dev-dependencies]
# capability-artifact fixtures (tests/runner.rs) embed the REAL tool
# interpreter + a pipeline-v1 payload (ADR-0017). auto-passes does not depend
# on auto-runtime — its tree is auto-dsl/auto-frontier/auto-model — so this
# dev edge is acyclic; auto-trace (a normal dep) supplies canonical_json.
auto-passes = { workspace = true }

[lints]
workspace = true
