[project]
name = "auto-sdk"
version = "0.1.0"
description = "Auto trace SDK: record agent runs to v0 JSONL traces; replay them with recorded outputs substituted (spec/trace.md)"
requires-python = ">=3.10"

[project.optional-dependencies]
test = ["pytest>=9"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["auto_sdk"]
